Added OpenVR 1.14.15 dependency
Change-Id: I09ff76d771b24254e098a4bd7a58b644e6c4a55a

--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "roms/u-boot-sam460ex"]
 	path = roms/u-boot-sam460ex
 	url = git://git.qemu.org/u-boot-sam460ex.git
+[submodule "android/android-emugl/host/libs/openvr"]
+	path = android/android-emugl/host/libs/openvr
+	url = https://github.com/ValveSoftware/openvr.git
