--- a/android/android-emugl/host/libs/libOpenglRender/CMakeLists.txt
+++ b/android/android-emugl/host/libs/libOpenglRender/CMakeLists.txt
@@ -116,7 +116,8 @@ target_link_libraries(
          renderControl_dec
          OpenglRender_vulkan
          OpenGLESDispatch
-         GLSnapshot)
+         GLSnapshot
+         openvr_api)
 target_compile_definitions(OpenglRender PRIVATE -DVK_ANDROID_native_buffer)
 android_target_compile_definitions(OpenglRender windows PRIVATE
                                    -DVK_USE_PLATFORM_WIN32_KHR)
