Added a simple Hello World
Change-Id: I3631016aa68cf09b54057377eda67b471af4f972

--- a/android/android-emugl/host/libs/libOpenglRender/CMakeLists.txt
+++ b/android/android-emugl/host/libs/libOpenglRender/CMakeLists.txt
@@ -93,6 +93,7 @@ android_add_library(
       RenderContext.cpp
       RenderControl.cpp
       RendererImpl.cpp
+      LemvrMain.cpp
       RenderLibImpl.cpp
       RenderThread.cpp
       RenderThreadInfo.cpp
@@ -175,6 +176,7 @@ if(NOT LINUX_AARCH64)
         RenderContext.cpp
         RenderControl.cpp
         RendererImpl.cpp
+        LemvrMain.cpp
         RenderLibImpl.cpp
         RenderThread.cpp
         RenderThreadInfo.cpp
