Added basic VR functionality
Change-Id: I7f45f560a801f71ab4e358f92b886d7c0c7fda92

--- a/android/android-emugl/host/libs/libOpenglRender/CMakeLists.txt
+++ b/android/android-emugl/host/libs/libOpenglRender/CMakeLists.txt
@@ -94,6 +94,7 @@ android_add_library(
       RenderControl.cpp
       RendererImpl.cpp
       LemvrMain.cpp
+      TextureCompat.cpp
       RenderLibImpl.cpp
       RenderThread.cpp
       RenderThreadInfo.cpp
@@ -177,6 +178,7 @@ if(NOT LINUX_AARCH64)
         RenderControl.cpp
         RendererImpl.cpp
         LemvrMain.cpp
+        TextureCompat.cpp
         RenderLibImpl.cpp
         RenderThread.cpp
         RenderThreadInfo.cpp
